# PreDev-Backend

./: .dockerignore  .env.example  README.md  client.py  docker-compose.yml  gemini.py  pyproject.toml  solar.py
.claude/: API_SPEC_1.3.md  PLAN.md
.github/workflows/: claude.yml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: config.py  database.py  deps.py  main.py
app/api/v1/: chat.py  dev.py  ending.py  health.py  router.py  scenes.py  sessions.py
app/llm/: graph.py  nodes.py  prompts.py  solar_client.py
app/models/: orm.py
app/schemas/: chat.py  common.py  enums.py  game.py
app/services/: chat_service.py  ending_service.py  scene_config.py  session_service.py  story_context.py  suggestion_service.py  trigger_engine.py  vector_store.py
app/utils/: sse.py
docker/: Dockerfile
